--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     /* Estilos para a imagem */
     .container img {
-        width: 56%;
+        width: 80%;
         height: auto;
     }
 
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="img/2-bandeira-do-brasil.webp" alt="bandeira-do-brasil"
+        <img src="img/2-bandeira-do-brasil.webp"alt="bandeira-do-brasil">
         <div class="text-overlay"></div>
              <h1>Feliz 7 de Setembro!</h1>
              <p>Que a Independencia do Brasil seja sempre celebrada com orgulho e patrionismo.</p>
